--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,14 +3,16 @@ services:
     app:
         build:
             context: ./
-            dockerfile: dev.Dockerfile
+            dockerfile: Dockerfile
         ports:
             - "${JUPYTER_PORT}:8888"
         volumes:
-            - ./app:/usr/src/app
+            - ./app:/home/jovyan
         networks:
             - default
+        entrypoint: "jupyter notebook --ip=0.0.0.0 --port=8888 --allow-root --NotebookApp.token=''"
     docsify:
+
         build:
             context: ./
             dockerfile: docsify.Dockerfile
